Fix Vercel deployment configuration for API routes
- Configure Vercel to use Nitro preset for proper API handling
- Update build output paths to match Vercel expectations
- Fix TypeScript errors in vite.config.ts
- Add live demo link to README

--- a/apps/pokemon-app/project.json
+++ b/apps/pokemon-app/project.json
@@ -11,7 +11,7 @@
       "options": {
         "configFile": "apps/pokemon-app/vite.config.ts",
         "main": "apps/pokemon-app/src/main.ts",
-        "outputPath": "dist/apps/pokemon-app/client",
+        "outputPath": "dist/apps/pokemon-app",
         "tsConfig": "apps/pokemon-app/tsconfig.app.json"
       },
       "defaultConfiguration": "production",
