--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,5 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "dist/apps/pokemon-app",
-  "framework": "angular",
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "/api/:path*"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]
+  "outputDirectory": ".vercel/output",
+  "framework": null
 }
